--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
   "dependencies": {
-    "@balena/abstract-sql-compiler": "^7.24.0",
+    "@balena/abstract-sql-compiler": "7.24.1-build-web-resource-2-924b6a699f0e50a1ecd787695879418e54671abd-1",
     "@balena/env-parsing": "^1.1.5",
     "@balena/es-version": "^1.0.2",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^14.54.7",
+    "@balena/pinejs": "14.54.8-build-web-resource-2-6b3e0e820e9e0914ec6226c0453f64a264876297-1",
     "@sentry/node": "^7.31.1",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.38",
