--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,19 @@
 - commits:
+    - subject: Update grafana/loki Docker tag to v2.7.2
+      hash: 90902f2e3d000b5a23683ab7c5e226f6decc3b1a
+      body: |
+        Update grafana/loki to 2.7.2
+
+        Update grafana/loki from 2.7.1 to 2.7.2
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Renovate Bot
+      nested: []
+  version: 7.7.1
+  title: ""
+  date: 2023-01-26T15:08:07.896Z
+- commits:
     - subject: Update npm to 9.4.0
       hash: 4591b930ea164e4860166866bcab77e0434ea038
       body: |
