--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,16 @@
 - commits:
+    - subject: Remove missed no longer needed Writable cast
+      hash: cfe69cc35dc2ab29e5568c83bddf29ace83ee1cf
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Thodoris Greasidis
+      nested: []
+  version: 7.8.2
+  title: ""
+  date: 2023-02-02T16:33:35.231Z
+- commits:
     - subject: Change auth.findUser to accept non-readonly arrays of user fiels
       hash: 3bebc95e567b53c793c5dcd9f8027d30c88da455
       body: ""
