--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,16 @@
 - commits:
+    - subject: Destructure hook args in the fn definition where possible
+      hash: 691b778a781880de5cc8cda4c188e1cf3525c631
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Pagan Gazzard
+      nested: []
+  version: 7.13.4
+  title: ""
+  date: 2023-02-15T14:59:35.285Z
+- commits:
     - subject: Fix cpu_id reported either in lower / upper case
       hash: 76f7339ab7b549d60db9fb5e42415681fba85445
       body: |
