--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
   "dependencies": {
-    "@balena/abstract-sql-compiler": "^7.25.3",
+    "@balena/abstract-sql-compiler": "7.26.1-build-web-resource-6-a260e61ac59cff84333ccfe727e2ee53762e5e7c-1",
     "@balena/env-parsing": "^1.1.5",
     "@balena/es-version": "^1.0.2",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^14.59.1",
+    "@balena/pinejs": "14.61.4-build-web-resource-2-faa3c16b0bbe120ea2d4af8dd104b822b5875e4e-1",
     "@sentry/node": "^7.34.0",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.38",
