--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,16 @@
 - commits:
+    - subject: Skip deleting service installs for the app a device is moving to
+      hash: fecfcda6c58390df04dd4acadcdcec97ca31cdb6
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Pagan Gazzard
+      nested: []
+  version: 8.0.1
+  title: ""
+  date: 2023-03-02T16:05:00.249Z
+- commits:
     - subject: Remove dependent devices
       hash: f8d7691f163d3da71e025448fbc5968d8342b6e5
       body: |
