--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,16 @@
 - commits:
+    - subject: Add a cache for checking logs write permissions
+      hash: d8084363d55bdcf2204792a6403865e49be9ef2d
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Pagan Gazzard
+      nested: []
+  version: 9.1.3
+  title: ""
+  date: 2023-03-07T18:04:20.469Z
+- commits:
     - subject: Create a separate cloudlink device permission
       hash: bf479e00e246e6d9e43e79edb3d3bdf81b5ce7f3
       body: ""
